# philo

./: .gitginore  CMakeLists.txt
philo/: Makefile
philo/includes/: philosopher.h
philo/srcs/: check_end.c  clean_exit.c  create_threads.c  get_time.c  init_game.c  init_rules.c  philo.c  print_status.c  routine.c
